--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,7 @@ set(SOURCE_FILES
 
 add_executable(OpenCLPlayground ${SOURCE_FILES})
 
-target_compile_definitions(OpenCLPlayground PUBLIC -DSAXPY_DOUBLE)
+# target_compile_definitions(OpenCLPlayground PUBLIC -DSAXPY_DOUBLE)
 
 # FIXME OpenCL
 target_include_directories(OpenCLPlayground PUBLIC $ENV{CUDA_PATH}/include)
