--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,10 @@ project(OpenCLPlayground)
 
 set(CMAKE_CXX_STANDARD 14)
 
+if (${CMAKE_HOST_SYSTEM_NAME} MATCHES Darwin)
+    find_package(OpenCL REQUIRED)
+endif()
+
 include_directories(source)
 
 set(SOURCE_FILES
@@ -21,5 +25,11 @@ add_executable(OpenCLPlayground ${SOURCE_FILES})
 # target_compile_definitions(OpenCLPlayground PUBLIC -DSAXPY_DOUBLE)
 
 # FIXME OpenCL
-target_include_directories(OpenCLPlayground PUBLIC $ENV{CUDA_PATH}/include)
-target_link_libraries(OpenCLPlayground PUBLIC $ENV{CUDA_PATH}/lib/x64/OpenCL.lib)
+if (${CMAKE_HOST_SYSTEM_NAME} MATCHES Darwin)
+    # Silence depracations on OSX
+    target_compile_definitions(OpenCLPlayground PRIVATE -DCL_SILENCE_DEPRECATION)
+    target_link_libraries(OpenCLPlayground OpenCL::OpenCL)
+else()
+    target_include_directories(OpenCLPlayground PUBLIC $ENV{CUDA_PATH}/include)
+    target_link_libraries(OpenCLPlayground PUBLIC $ENV{CUDA_PATH}/lib/x64/OpenCL.lib)
+endif()
